--- a/style.css
+++ b/style.css
@@ -35,6 +35,11 @@ body{
 }
 .sign{
   background-image: url(IMG/backgroundmain6.jpg);
+  
+}
+.cart{
+ background-color: #cbecff;
+ 
 }
 .price{
   background-color: #fffec8;
@@ -43,12 +48,12 @@ body{
   background-image: url(IMG/backgroundmain7.png);
 }
 .ourstory{
-  background-color: rgb(255, 246, 255);
+  background-color: rgb(199, 164, 164);
 }
  .nav_bar{
   display:flex;
   justify-content: center;
-  background-color: hsl(0, 100%, 90%);
+  background-color: rgb(187, 132, 132);;
   /*to make the nav bar at the top of the page*/
   position: fixed;
   width: 100%;
@@ -57,12 +62,11 @@ body{
   z-index: 100000;
 }
  span{
-    margin: 30px;
+    margin-left: 50px;
     margin-top: 30px;
     font-size: large;
-    
     font-family: cursive;
-    
+    display: block;
  }
 #logo{
     margin-left: 1%;
@@ -71,6 +75,12 @@ body{
     float: left;
     font-size: 70px;
     font-style: oblique;
+}
+#logo1{
+  display: block;
+  width: 40px;
+  height: 40px;
+  margin-right: 1%;
 }
 .bground{
     width: 100%;
@@ -93,7 +103,7 @@ a{
     color: #000000;
 }
 #contact{
-    color: rgb(241, 87, 87);
+    color: rgb(250, 221, 183);
 }
 a:hover{
     color: #c90909;
@@ -106,7 +116,7 @@ a:visited{
 }
 #contactbox{
     border: 1px solid rgb(250, 206, 112);
-    background-color: rgb(252, 225, 167);
+    background-color: rgb(96, 138, 100);
     opacity: 0.9;
     margin-top: 14%;
     margin-right: 60%;
@@ -132,7 +142,7 @@ a:visited{
 }
 footer{
     width: 100%;
-    height: 130px;
+    height: 150px;
     background: rgb(255, 207, 207);
     color: rgb(78, 0, 0);
     font-size: 18px;
@@ -160,18 +170,20 @@ footer{
 #submit{
   width: 250px;
   height: 50px;
-  background-color: #ff9900fa;
-  color: #810000;
-  border-color: #ff9900;
+  background-color: #345203fa;
+  color: #e2fcdf;
+  border-color: rgb(96, 138, 100);
   font-size: large;
-    
+   font-style: bold; 
 }
 .dropdown {
     display: inline-block;
     position: relative;
     border-color: #b4032f;
-    padding-top: 13%;
-    padding-left: 2%;  
+    padding-top: 1%;
+    margin-left: 87%; 
+    margin-bottom: 1%; 
+    
   }
   .dropdown-content {
     display: none;
@@ -199,27 +211,6 @@ footer{
     background-color: #ee3866;
     border-color: #ee3866;
     font-size: large;
-  }
-  .picleft{
-    margin-left: 25%;
-   height:300px ;
-   width:200px ;
-   text-align: center;
-  }
-  .picmiddle{
-    margin-left: 10%;
-    height:300px ;
-   width:200px ;
-   text-align: center;
-  }
-  .pictextleft{
-    margin-left: 28%;
-  }
-  .pictextmiddle{
-    margin-left: 13%;
-  }
-  .first{
-    margin-bottom: 20px;
   }
   #signbox{
     border: 1px solid rgb(250, 206, 112);
@@ -272,7 +263,7 @@ footer{
   width: 500px;
 }
 #logoc{
-color: rgb(216, 29, 100);
+color: rgb(138, 58, 58);
 }
 #pic1our{
  
@@ -286,6 +277,7 @@ color: rgb(216, 29, 100);
   border-radius: 10px;
   padding-top: 20%;
   padding-left: 5%;
+  color: beige;
   
 }
 #ourbox1{
@@ -296,8 +288,117 @@ padding-left: 50%;
 padding-top: 10%;
 font-family: cursive;
 color: #800101;
-
-
 }
-
-
+#cart{
+  border: 1px solid rgb(252, 200, 202);
+  background-color: #fffefe;
+  margin-top: 10%;
+  margin-left: 15%;
+  font-size: larger;
+  font-family: cursive;
+  border-radius: 20px;
+  text-align: left;
+  padding-top: 20px;
+  padding-bottom: 40px;
+  width: 70%;
+  height: 500px;
+}
+#cart1{
+  border: 1px solid rgb(252, 200, 202);
+  background-color: #fffefe;
+  margin-top: 10%;
+  margin-left: 15%;
+  font-size: larger;
+  font-family: cursive;
+  border-radius: 20px;
+  text-align: left;
+  padding-top: 20px;
+  padding-bottom: 40px;
+  width: 70%;
+  height: 500px;
+}
+ .Heading{
+  font-size: larger;
+  font-family: sans-serif;
+  font-weight: bold;
+  color: #7a0707;
+  margin-left: 40%;
+  margin-bottom: 4%;
+ }
+.table{
+  margin-left: 6%;
+  font-family: "cursive";
+  font-style: bold;
+  color: #7a0707;
+}
+.picart1{
+  height: 160px;
+  width: 100px;
+  border-radius: 20px;
+ }
+ .line{
+  border: 1px solid rgb(173, 4, 4);
+  border-radius: 1px;
+  border-color: #af0303;
+  border-width: 1px;
+  margin-left: 3%;
+  margin-right: 3%;
+}
+.cont{
+ margin-left: 70%;
+ padding: 2%;
+ margin-top: 1%;
+ background-color: #c20e0e;
+ color: #fdfdfd;
+ border-color: #c20e0e;
+}
+.total{
+  margin-left: 70%;
+ margin-top: 1%;
+ margin-right: 10.5%;
+ font-size: large;
+ border-color: #c20e0e;
+ background-color: #c20e0e;
+ color: #fdfdfd;
+ padding-right: 1px;
+}
+.table1{
+  margin-left: 2%;
+  margin-top: 4%;
+  padding-left: 3%;
+  font-family: "cursive";
+  font-style: bold;
+  color: #7a0707;
+}
+#cart{
+  border: 1px solid rgb(252, 200, 202);
+  background-color: #fffefe;
+  margin-top: 10%;
+  margin-left: 15%;
+  font-size: larger;
+  font-family: cursive;
+  border-radius: 20px;
+  text-align: left;
+  padding-top: 20px;
+  padding-bottom: 40px;
+  width: 70%;
+  height: 1100px;
+}
+.formcar2{
+  margin-left: 8%;
+  margin-top: 3%;
+  
+}
+.carttext{
+  margin-right: 5%;
+}
+.choosing{
+  color: #7a0707;
+  margin-top: 2%;
+}
+#picmap{
+  height: 70%;
+  width: 80%;
+  margin-top: 15%;
+  margin-left: 9%;
+}
