--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ body{
 }
 #control{
  
-  margin-left: 430px;
+  margin-left: 400px;
     margin-top: 200px;
     font-size: large;
     font-family: cursive;
@@ -255,6 +255,11 @@ footer{
   text-align: center;
   padding-top: 20px;
   padding-bottom: 40px;
+}
+#toto{
+  margin: 10px;
+  background-color: #108001;
+  border: 1px solid rgb(138, 61, 71);
 }
 #signboxx{
   
